--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
+        defer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
+        defer></script>
     <script src="./app.js" defer></script>
 </head>
+
 <body>
     <div class="container">
-        <form action="#" id="form">
-            <label for="expense">Choose ExpenseAmount:</label>
-            <input type="number" name="desc" id="expense">
+        <div>
+            <form action="#" id="form" style="border: 2px solid red;
+            padding:15px ; border-radius:12px;
+            margin-bottom:12px;"">
+            <div>
+                <label for=" expense">Choose ExpenseAmount:</label>
+                <input type="number" name="desc" id="expense" class="form-control" style="display: inline;">
+        </div>
+        <div>
             <label for="desc">Choose Description</label>
-            <input type="text" name="description" id="description">
+            <input class="form-control" type="text" name="description" id="description">
+        </div>
+        <div class="submitBtn">
             <label for="category">Choose a category</label>
             <select name="category" id="category">
                 <option value="Movie">Movie</option>
@@ -21,9 +37,14 @@
                 <option value="Music">Music</option>
                 <option value="Football">Football</option>
             </select>
-            <input type="submit" value="Add Expense">
+        </div>
+        <div class="submitBtn"> <input type="submit" value="Add Expense"></div>
+
         </form>
+        <ul id="listItem"></ul>
     </div>
-    
+    </div>
+
 </body>
+
 </html>
